Dark mode bug fix : Issue #8

--- a/assets/css/dark-mode.css
+++ b/assets/css/dark-mode.css
@@ -12,7 +12,7 @@
 .dark-mode-container {
     position: relative;
     width: 100%;
-    margin-bottom: -30px;
+    margin-bottom: -50px;
 }
 
 .theme-switch-wrapper {
@@ -25,9 +25,9 @@
 }
 
 .theme-switch {
-    width: 100%;
     display: flex;
-    justify-content: flex-end;
+    right: 0;
+    border-radius: 50%;
 }
 
 .theme-switch input {
